--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
-name: Run tests
 on: [push]
+
 jobs:
   build:
+  name: Hello world
   runs-on: ubuntu-latest
   steps:
   - uses: actions/checkout@v2
-  - name: Run tests
+  - name: Write a multi-line message
     run: |
-      echo hallo
+      echo This demo file shows a 
+      echo very basic and easy-to-understand workflow.
