--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,16 @@ jobs:
 
     - name: Run tests
       run: npm run test
+      working-directory: ./tenter
 
     - name: Start server
       run: npm run start
+      working-directory: ./tenter
 
     - name: Wait for tests to finish
       run: npm run wait-for-tests
+      working-directory: ./tenter
 
     - name: Stop server
       run: npm run stop
+      working-directory: ./tenter
