--- a/tenter/package.json
+++ b/tenter/package.json
@@ -10,9 +10,10 @@
     "@mui/material": "^5.13.4",
     "@react-spring/web": "^9.7.2",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.11.2",
