--- a/tenter/package.json
+++ b/tenter/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase-mock": "^2.3.2",
+    "jest": "^23.6.0"
   }
 }
