--- a/tenter/package.json
+++ b/tenter/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "react": "^17.0.2",
+    "react-confetti": "^6.1.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-tinder-card": "^1.5.2",
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
