--- a/tenter/package.json
+++ b/tenter/package.json
@@ -31,6 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "coverage": "react-scripts test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/*.{types,stories,constants,test,spec}.{ts,tsx}'",
     "wait-for-tests": "while ! nc -z localhost 3000; do sleep 1; done"
   },
   "eslintConfig": {
