--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
       working-directory: ./tenter
 
     - name: Run tests
-      run: npm run test
+      run: npm run test --coverage
       working-directory: ./tenter
