--- a/tenter/package.json
+++ b/tenter/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "firebase-mock": "^2.3.2",
     "firebase-tools": "^12.3.1",
+    "istanbul": "^0.4.5",
     "jest": "^23.6.0"
   }
 }
