--- a/tenter/package.json
+++ b/tenter/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bobacrack.github.io/IPR",
+  "homepage": "http://bobacrack.github.io/",
   "name": "tenter",
   "version": "0.1.0",
   "private": true,
