--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -14,4 +14,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!-- Spring Boot starter dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.5.3</version> <!-- Replace with the desired version -->
+        </dependency>
+
+        <!-- Spring Boot Jersey starter dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+            <version>2.5.3</version> <!-- Replace with the desired version -->
+        </dependency>
+        
+        <!-- Spring Boot Web starter dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.5.3</version> <!-- Replace with the desired version -->
+        </dependency>
+    </dependencies>
 </project>
