--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -35,5 +35,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.5.3</version> <!-- Replace with the desired version -->
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.23</version>
+        </dependency>
+
+
     </dependencies>
 </project>
