--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Backend</artifactId>
+    <artifactId>Server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -28,7 +28,7 @@
             <artifactId>spring-boot-starter-jersey</artifactId>
             <version>2.5.3</version> <!-- Replace with the desired version -->
         </dependency>
-        
+
         <!-- Spring Boot Web starter dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -40,6 +40,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.23</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.5.3</version>
         </dependency>
 
 
