--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -47,6 +47,12 @@
             <version>2.5.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.4</version>
+        </dependency>
+
 
     </dependencies>
 </project>
