--- a/.github/workflows/buildAndDeployBackend.yml
+++ b/.github/workflows/buildAndDeployBackend.yml
@@ -32,4 +32,6 @@ jobs:
           context: ./internal
           file: ${{ env.DOCKERFILE_PATH }}
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
