--- a/.github/workflows/buildAndDeployFrontend.yml
+++ b/.github/workflows/buildAndDeployFrontend.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and publish Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./internal
+          context: ./tenter
           file: ${{ env.DOCKERFILE_PATH }}
           push: true
           tags: |
