--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,27 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.TOKEN }}
-
-      - name: Build and push Docker image to GHCR
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/your-app:latest
-
       - name: SSH into the server
         uses: appleboy/ssh-action@master
         with:
           host: your-server-ip
-          username: your-ssh-username
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          username: ${{ secrets.USER}}
+          key: ${{ secrets.SSH }}
+          passphrase: ${{ secrets.PASS }}
 
       - name: Deploy with Docker Compose
         run: |
