--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-          cd /jome/kuehler
+          cd /home/kuehler
           docker-compose pull
           docker-compose up -d
