--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
           passphrase: ${{ secrets.PASS }}
           script: |
             cd
-            docker-compose pull
-            docker-compose up -d
+            docker compose pull
+            docker compose up -d
