--- a/.github/workflows/buildAndDeployFrontend.yml
+++ b/.github/workflows/buildAndDeployFrontend.yml
@@ -35,3 +35,18 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+      
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: SSH into the server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.IP }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH }}
+          passphrase: ${{ secrets.PASS }}
+          script: |
+            cd /home/kuehler
+            docker compose pull
+            docker compose up -d
