--- a/.github/workflows/buildAndDeployFrontend.yml
+++ b/.github/workflows/buildAndDeployFrontend.yml
@@ -3,7 +3,7 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - d
+      - final
 
 env:
   IMAGE_NAME: frontend
@@ -36,17 +36,3 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
       
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: SSH into the server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.IP }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH }}
-          passphrase: ${{ secrets.PASS }}
-          script: |
-            cd /home/kuehler
-            docker compose pull
-            docker compose up -d
